--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
     />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.13.0/devicon.min.css">
+
+
     <title>Codewaves | Coding made simple</title>
   </head>
   <body>
